--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1>HELLO MAN</h1>
+    <h1 class="text-red">HELLO MAN</h1>
 </body>
 </html>
