--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
     <h1 class="text-red">HELLO MAN</h1>
-</body>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse fugit
+      eveniet tempora, vitae laborum culpa architecto ratione doloremque
+      inventore deleniti veritatis sequi perspiciatis quo mollitia porro
+      necessitatibus. Eum, veniam possimus.
+    </p>
+  </body>
 </html>
