--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1 class="text-red">HELLO MAN</h1>
-    <p>
+    <p class="flex">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse fugit
       eveniet tempora, vitae laborum culpa architecto ratione doloremque
       inventore deleniti veritatis sequi perspiciatis quo mollitia porro
